@@ -1,3 +1,8 @@
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.1.0-0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Wed May 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.5-0
 - Maintenance: removed OBE build/rpm_metadata/requires
 
